? - Release 0.4.0_beta2
--------------------------------------------------
	* Updated ZFS code to Nevada build 85.
Features:
	* gzip compression support (upstream).
	* Filesystems can have multiple copies of data (zfs set fs copies=x) (upstream).
	* zpool status -v now displays paths of files with permanent errors (upstream).
	* Separate Intent Log (upstream, not tested!).
	* Support for quotas and reservations that don't include snapshots and clones (upstream).
	* Support for level-2 cache devices (upstream, not tested).
	* Ported to the sparc64 architecture (arkadi).
	* Implemented zfs send/recv.
	* Turned zfs-fuse into a real daemon (Cameron Patrick, Bryan Donlan).
Enhancements:
	* Open block devices with O_EXCL.
	* Log warning and error messages to syslog.
Bug fixes:
	* MAJOR: Made zfs-fuse flush the write cache of ATA/SATA/SCSI disks (Thanks Eric Anopolsky!).
	* Fix possible corruption problem on 32-bit machines.
	* Fix crash when using 'zpool status -v' to list errors.
	* Allow suid files and device nodes to be stored on zfs (Cameron Patrick).
	* Fix segfault when trying to run as non-root (Ming Zhang).
	* Linux compatibility fix when trying to remove non-empty directory.
	* Fix unexpected return codes when working with unlinked files/directories.
	* Add support for gcc 4.2 (patch by Michal Kowalczuk, some fixes by Roland/devzero).

2007/03/06 - Release 0.4.0_beta1
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 56
Enhancements:
	* Added multithreaded event loop
	* Added LSB compliant init.d script to contrib/ directory (contributed by Dietmar Scharf).
Bug fixes:
	* Bug #9833 - Cannot execute binaries inside ZFS filesystems.
	* Bug #9834 - Terminating zfs-fuse didn't unmount filesystems.
	* Bug #9835 - zfs-fuse would exit when killing zfs or zpool with ctrl-c.
	* Bug #9838 - zfs-fuse memory usage would grow almost indefinitely.