@@ -3,6 +3,6 @@ Import('env')
 objects = Split('zdb.c zdb_il.c ptrace.c #lib/libavl/libavl.a #lib/libnvpair/libnvpair-user.a #lib/libumem/libumem.a #lib/libzfs/libzfs.a #lib/libzpool/libzpool-user.a #lib/libzfscommon/libzfscommon-user.a #lib/libuutil/libuutil.a #lib/libsolcompat/libsolcompat.a')
 cpppath = Split('#lib/libavl/include #lib/libnvpair/include #lib/libumem/include #lib/libzfscommon/include #lib/libzpool/include #lib/libsolcompat/include #lib/libzfs/include')
 
-libs = Split('rt pthread dl z m')
+libs = Split('rt pthread dl z m aio')
 
 env.Program('zdb', objects, CPPPATH = env['CPPPATH'] + cpppath, LIBS = libs)
